2002-01-31  Zbigniew Chyla  <cyba@gnome.pl>

	* about.c (AboutShowWindow): Don't try to translate empty string.

2001-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* .cvsignore: s/logview/gnome-system-log/

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnome-system-log-actions.db:
	* gnome-system-log-descript.db:
	* gnome-system-log-pam:
	* gnome-system-log-regexp.db:
	* gnome-system-log-security.in:
	* gnome-system-log.1:
	* gnome-system-log.desktop.in:
	* logview-actions.db:
	* logview-descript.db:
	* logview-pam:
	* logview-regexp.db:
	* logview-security.in:
	* logview.1:
	* logview.c: (open_databases):
	* logview.desktop.in:
	* pixmaps/Makefile.am:


	Rename application binary to match menu name.

	Whew. This one was a PITA.
	
2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* logview.desktop.in:

	Change menu names to conform with the HIG, and
	install into the GNOME2 .desktop file location.
